# simple-shell

./: .gitignore  CMakeLists.txt  README.md  builtin.c  builtin.h  builtins.c  builtins.h  history.c  history.h  launch.c  launch.h  loop.c  loop.h  main.c  read.c  read.h  simple_shell  split.c  split.h
.github/workflows/: cmake-multi-platform.yml
args/: read.h  split.c  split.h
process/: pipe.c  pipe.h  process.c  process.h
